--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ tests:
     script:
       - gofmt -d -e ./pkg/ ./cmd/
       - go vet ./cmd/... ./pkg/...
-      - go test -race ./cmd/... ./pkg/...
+      - go test -v ./cmd/... ./pkg/...
 
 compile:
     stage: build
