--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ image: golang:latest
 before_script:
   - git config --global url."https://code.bcarlin.xyz".insteadOf "ssh://:git@code.bcarlin.xyz"
   - cd $CI_PROJECT_DIR
+  - env
 
 stages:
     - test
