--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@
 image: golang:latest
 
 before_script:
-  - git config --global url."https://code.bcarlin.xyz".insteadOf "ssh://:git@code.bcarlin.xyz"
+  - git config --global url."https://code.bcarlin.xyz".insteadOf "ssh://git@code.bcarlin.xyz:2222"
   - cd $CI_PROJECT_DIR
   - env
 
