--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ before_script:
   - cd $CI_PROJECT_DIR
   - mkdir -p .gocache
   - export GOPATH="$CI_PROJECT_DIR/.gocache"
+  - export PATH="$CI_PROJECT_DIR/.gocache/bin:$PATH"
   - env
 
 cache:
