--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,12 +3,14 @@ image: golang:latest
 
 before_script:
   - git config --global url."https://code.bcarlin.xyz".insteadOf "ssh://git@code.bcarlin.xyz:2222"
-  - go get github.com/golangci/golangci-lint/cmd/golangci-lint
   - cd $CI_PROJECT_DIR
+  - mkdir -p .gocache
+  - export GOPATH="$CI_PROJECT_DIR/.gocache"
+  - export PATH="$CI_PROJECT_DIR/.gocache/bin:$PATH"
+  - test -n $(which golangci-lint >/dev/null 2>&1) \
+    -a -n $(golangci-lint --version | grep '1\.16\.0' >/dev/null 2>&1) \
+    && curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $(go env GOPATH)/bin v1.6.0
   - env
-
-after_script:
-  - ln -s $GOPATH .gocache
 
 cache:
   key: go_dependencies_cache
@@ -24,6 +26,7 @@ tests:
     stage: test
     script:
       - gofmt -d -e ./pkg/ ./cmd/
+      - test -n $(which golangci-lint >/dev/null 2>&1) && go get github.com/golangci/golangci-lint/cmd/golangci-lint
       - ./make.sh check
       - go test -coverpkg ./cmd/...,./pkg/... -coverprofile cover.out -v ./cmd/... ./pkg/...
       - go tool cover -func=cover.out
