--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ before_script:
   - mkdir -p .gocache
   - export GOPATH="$CI_PROJECT_DIR/.gocache"
   - export PATH="$CI_PROJECT_DIR/.gocache/bin:$PATH"
-  - test -n $(which golangci-lint >/dev/null 2>&1 && golangci-lint --version | grep "$GOLANGCI_LINT_VERSION" >/dev/null 2>&1)
+  - which golangci-lint >/dev/null 2>&1 && golangci-lint --version | grep "$GOLANGCI_LINT_VERSION" >/dev/null 2>&1
     || curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $(go env GOPATH)/bin v$GOLANGCI_LINT_VERSION
   - env
 
