--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ before_script:
   - export PATH="$CI_PROJECT_DIR/.gocache/bin:$PATH"
   - which golangci-lint >/dev/null 2>&1 && golangci-lint --version | grep "$GOLANGCI_LINT_VERSION" >/dev/null 2>&1
     || curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $(go env GOPATH)/bin v$GOLANGCI_LINT_VERSION
+  - go get -u golang.org/x/tools/cmd/stringer
   - env
 
 cache:
@@ -27,6 +28,7 @@ stages:
 tests:
     stage: test
     script:
+      - go generate ./pkg/...
       - gofmt -d -e ./pkg/ ./cmd/
       - ./make.sh check
       - go test -coverpkg ./cmd/...,./pkg/... -coverprofile cover.out -v ./cmd/... ./pkg/...
@@ -37,6 +39,7 @@ compile:
     only: [ tags ]
     script:
       - export CGO_ENABLED=0
+      - go generate ./pkg/...
       - go build -ldflags "-s -w" -o $CI_PROJECT_DIR/waarp-gatewayd ./cmd/waarp-gatewayd
     artifacts:
       paths:
