Added server authentication to R66 client

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ variables:
 
 before_script:
   - git config --global url."https://code.bcarlin.xyz".insteadOf "ssh://git@code.bcarlin.xyz:2222"
+  - git config --global url."https://gitlab-ci-token:$CI_JOB_TOKEN@code.waarp.fr".insteadOf "https://code.waarp.fr"
   - cd $CI_PROJECT_DIR
   - mkdir -p .gocache
   - export GOPATH="$CI_PROJECT_DIR/.gocache"
