too early to add -race

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ tests:
       - go generate ./pkg/...
       - gofmt -d -e ./pkg/ ./cmd/
       - ./make.sh check
-      - go test -race -coverpkg ./cmd/...,./pkg/... -coverprofile cover.out -v ./cmd/... ./pkg/...
+      - go test -coverpkg ./cmd/...,./pkg/... -coverprofile cover.out -v ./cmd/... ./pkg/...
       - go tool cover -func=cover.out
 
 compile:
