--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,12 +39,12 @@ tests:
   before_script:
     - export GOPATH="$CI_PROJECT_DIR/.gocache"
     - export PATH="$CI_PROJECT_DIR/.gocache/bin:$PATH"
-    - go install gotest.tools/gotestsum
+    - go install gotest.tools/gotestsum@latest
   script:
     #- gotestsum --junitfile tests.junit.xml -- -coverprofile=coverage.txt -covermode atomic -race ./...
     - gotestsum --junitfile tests.junit.xml -- -coverprofile=coverage.txt -covermode atomic ./...
   after_script:
-    - go install github.com/boumenot/gocover-cobertura
+    - go install github.com/boumenot/gocover-cobertura@latest
     - gocover-cobertura < coverage.txt > coverage.xml
     - go tool cover -func=coverage.txt | grep "total:"
   coverage: '/total:\s+\(statements\)\s+(\d+.\d+\%)/'
