--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ image: golang:latest
 
 
 variables:
-  VERSION: "${CI_COMMIT_TAG"
+  VERSION: "${CI_COMMIT_TAG}"
   PACKAGE_REGISTRY_URL: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/waarp-gateway/${VERSION}"
   PACKAGE_DEB: "waarp-gateway_${VERSION}-1_amd64.deb"
   PACKAGE_RPM: "waarp-gateway-${VERSION}-1.x86_64.rpm"
