fix: deprecated all SHA1 based signature algorithms
SHA1 is known to be insecure for quite a while now. Go1.18 officially removed it from the tls package. This commit re-enables it for the moment, but all SHA1 based signature algorithms for TLS are now deprecated and will be removed in a future version when go1.19 comes out.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,5 +1,9 @@
 # options for analysis running
 run:
+  # revert to go1.17 while the linters are being updated to add support for the
+  # generics introduced in go1.18
+  go: '1.17'
+
   # default concurrency is a available CPU number
   concurrency: 4
 
