--- a/.golangci.yml
+++ b/.golangci.yml
@@ -774,7 +774,7 @@ issues:
   new: false
 
   # Show only new issues not already present in the git 'master' branch
-  new-from-rev: master
+  new-from-rev: origin/master
 
   # Show issues in any part of update files (requires new-from-rev or new-from-patch)
   whole-files: true
