feat: added auto-generated RemoteTransferID
When creating a new client transfer, a RemoteTransferID is now auto-generated using snowflake. This RemoteTransferID is now used in transfer requests instead of the old auto-incremented ID (for protocols that allow it). The old auto-incremented ID is still used as primary key for transfers.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -684,6 +684,9 @@ linters:
     - prealloc
     - scopelint
     - testpackage
+    - exhaustruct #non-nullable attributes don't need to be explicitly declared
+    - nonamedreturns #named return variables are sometimes ok
+    - execinquery #raises lots of false-positives, might re-enable once fixed
   #presets:
   #  - bugs
   #  - unused
