feat: Added server enabling/disabling to REST & the CLI

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -719,6 +719,7 @@ issues:
         - gocyclo
         - gosec
         - varnamelen
+        - bodyclose
 
     # Allow dot import aliases in test files.
     - path: _test\.go
