ci: Fixed issues in golangci.yml

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -691,6 +691,7 @@ linters:
     - exhaustruct #non-nullable attributes don't need to be explicitly declared
     - nonamedreturns #named return variables are sometimes ok
     - execinquery #raises lots of false-positives, might re-enable once fixed
+    - nosnakecase #raises errors on imported variables (which we have no control on), might re-enable once fixed
   #presets:
   #  - bugs
   #  - unused
