fix: Updated the migration engine, and fixed the database migrations.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -338,11 +338,11 @@ linters-settings:
     settings:
       mnd:
         # the list of enabled checks, see https://github.com/tommy-muehle/go-mnd/#checks for description.
-        checks: argument,case,condition,operation,return,assign
+        checks: [argument,case,condition,operation,return,assign]
         # for files perm: 384=0o600
         ignored-numbers: 0o600,384,0o700,0o744
         # test files are ignored by default
-        # ignored-files: 
+        ignored-files: pkg/database/migrations/+[0-9].+[+0-9].+[0-9].go
         # ignored-functions: math.*
 
   gomoddirectives:
