--- a/.golangci.yml
+++ b/.golangci.yml
@@ -338,11 +338,11 @@ linters-settings:
     settings:
       mnd:
         # the list of enabled checks, see https://github.com/tommy-muehle/go-mnd/#checks for description.
-        checks: [argument,case,condition,operation,return,assign]
+        checks: argument,case,condition,operation,return,assign
         # for files perm: 384=0o600
         ignored-numbers: 0o600,384,0o700,0o744
         # test files are ignored by default
-        ignored-files: pkg/database/migrations/+[0-9].+[+0-9].+[0-9].go
+        # ignored-files: 
         # ignored-functions: math.*
 
   gomoddirectives:
@@ -753,6 +753,14 @@ issues:
     - linters:
       - tagliatelle
       text: "got 'macs' want 'maCs'"
+
+    # We disable some linters on migration files.
+    - path: pkg/database/migrations/+[0-9]\.+[+0-9]\.+[0-9]\.go
+      linters:
+        - funlen # splitting functions is not always possible (or desirable)
+        - dupl # some tables are similar, but factorizing their migrations is a bad idea
+        - gomnd # we use magic numbers for type sizes
+
 
   # Independently from option `exclude` we use default exclude patterns,
   # it can be disabled by this option. To list all
