fix: Adding a new server or deleting it via REST now adds/removes it from the service list

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -720,6 +720,7 @@ issues:
         - gosec
         - varnamelen
         - bodyclose
+        - noctx
 
     # Allow dot import aliases in test files.
     - path: _test\.go
