--- a/.golangci.yml
+++ b/.golangci.yml
@@ -103,7 +103,7 @@ linters-settings:
   errcheck:
     # report about not checking of errors in type assertions: `a := b.(MyStruct)`;
     # default is false: such cases aren't reported by default.
-    check-type-assertions: false
+    check-type-assertions: true
 
     # report about assignment of errors to blank identifier: `num, _ := strconv.Atoi(numStr)`;
     # default is false: such cases aren't reported by default.
@@ -126,6 +126,9 @@ linters-settings:
       - io.Copy(*bytes.Buffer)
       - io.Copy(os.Stdout)
       - (*database/sql.Rows).Close # Errors returned by Rows.Close are inconsequential
+      - (github.com/smartystreets/goconvey/convey.C).Print
+      - (github.com/smartystreets/goconvey/convey.C).Printf
+      - (github.com/smartystreets/goconvey/convey.C).Println
 
   errorlint:
     # Check whether fmt.Errorf uses the %w verb for formatting errors. See the readme for caveats
@@ -341,7 +344,7 @@ linters-settings:
         # the list of enabled checks, see https://github.com/tommy-muehle/go-mnd/#checks for description.
         checks: argument,case,condition,operation,return,assign
         # for files perm: 384=0o600
-        ignored-numbers: 0o600,384,0o700,0o744
+        ignored-numbers: 0o600,384,0o700,0o744,0o740
         # test files are ignored by default
         # ignored-files: 
         # ignored-functions: math.*
