--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ code_navigation:
 
 lint:
   stage: test
-  image: golangci/golangci-lint:latest
+  image: golangci/golangci-lint:v1.54.2
   script:
   - golangci-lint cache status
   - golangci-lint run --timeout 5m --out-format junit-xml > lint.junit.xml
