--- a/.golangci.yml
+++ b/.golangci.yml
@@ -727,6 +727,8 @@ linters:
     - nosnakecase #raises errors on imported variables (which we have no control on), might re-enable once fixed
     - tagalign #sorting tags does not always result in better readability
     - containedctx #might re-enable once a better solution has been found
+    - tparallel #a test being executable in parallel with others tests does not mean its subtests can be executed in parallel with each others
+
   #presets:
   #  - bugs
   #  - unused
@@ -815,12 +817,13 @@ issues:
         - errcheck
       source: "defer rows.Close()"
 
-        # We disable some linters on migration files.
+    # We disable some linters on migration files.
     - path: pkg/database/migrations/[0-9]+\.[0-9]+\.[0-9]+\.go
       linters:
         - funlen # splitting functions is not always possible (or desirable)
         - dupl # some tables are similar, but factorizing their migrations is a bad idea
         - gomnd # we use magic numbers for type sizes
+        - thelper # migrations test functions are NOT helpers (they are wrongly detected as such by the linter)
 
     # Hardcoded credentials are fine for testing.
     - path: pkg/utils/testhelpers/certs.go
@@ -833,7 +836,6 @@ issues:
       text: "s1039:"
       linters:
         - gosimple
-
 
   # Independently from option `exclude` we use default exclude patterns,
   # it can be disabled by this option. To list all
