--- a/.golangci.yml
+++ b/.golangci.yml
@@ -607,10 +607,10 @@ linters-settings:
       rules:
         # any struct tag type can be used.
         # support string case: `camel`, `pascal`, `kebab`, `snake`, `goCamel`, `goPascal`, `goKebab`, `goSnake`, `upper`, `lower`
-        json: camel
-        yaml: camel
-        xml: camel
-        bson: camel
+        json: goCamel
+        yaml: goCamel
+        xml: goCamel
+        bson: goCamel
         avro: snake
         mapstructure: kebab
 
@@ -679,12 +679,15 @@ linters-settings:
       - .Errorf(
       - errors.New(
       - errors.Unwrap(
+      - errors.Join(
       - .Wrap(
       - .Wrapf(
       - .WithMessage(
       - utils.RunWithCtx(
       - utils.GetPath(
       - utils.CheckCtx(
+      - utils.RWWithCtx(
+      - utils.RWatWithCtx(
 
   wsl:
     # See https://github.com/bombsimon/wsl/blob/master/doc/configuration.md for
