--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,24 +1,11 @@
 # This file is a template, and might need editing before it works on your project.
 image: golang:1.20
 
-    #before_script:
-    #  - git config --global url."https://code.bcarlin.xyz".insteadOf "ssh://git@code.bcarlin.xyz:2222"
-    #  - git config --global url."https://gitlab-ci-token:$CI_JOB_TOKEN@code.waarp.fr".insteadOf "https://code.waarp.fr"
-    #  - cd $CI_PROJECT_DIR
-    #  - mkdir -p .gocache
-    #  - env
-
-
 variables:
   VERSION: "${CI_COMMIT_TAG}"
   IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG
   LATEST_IMAGE_TAG: $CI_REGISTRY_IMAGE:latest
   PACKAGE_REGISTRY_URL: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/waarp-gateway/${VERSION}"
-  PACKAGE_DEB: "waarp-gateway_${VERSION}-1_amd64.deb"
-  PACKAGE_RPM: "waarp-gateway-${VERSION}-1.x86_64.rpm"
-  PACKAGE_LIN: "waarp-gateway-${VERSION}.linux.tar.gz"
-  PACKAGE_WIN: "waarp-gateway-${VERSION}.windows.zip"
-  PACKAGE_DOC: "waarp-gateway-doc-${VERSION}.zip"
 
 stages:
     - test
@@ -121,6 +108,12 @@ upload-packages:
   image: curlimages/curl:latest
   rules:
     - if: $CI_COMMIT_TAG
+  before_script:
+    - export PACKAGE_DEB="waarp-gateway_${VERSION#v}-1_amd64.deb"
+    - export PACKAGE_RPM="waarp-gateway-${VERSION#v}-1.x86_64.rpm"
+    - export PACKAGE_LIN="waarp-gateway-${VERSION#v}.linux.tar.gz"
+    - export PACKAGE_WIN="waarp-gateway-${VERSION#v}.windows.zip"
+    - export PACKAGE_DOC="waarp-gateway-doc-${VERSION#v}.zip"
   script:
     - |
       curl --header "JOB-TOKEN: ${CI_JOB_TOKEN}" --upload-file build/${PACKAGE_DEB} ${PACKAGE_REGISTRY_URL}/${PACKAGE_DEB}
@@ -149,6 +142,12 @@ release:
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   rules:
     - if: $CI_COMMIT_TAG
+  before_script:
+    - export PACKAGE_DEB="waarp-gateway_${VERSION#v}-1_amd64.deb"
+    - export PACKAGE_RPM="waarp-gateway-${VERSION#v}-1.x86_64.rpm"
+    - export PACKAGE_LIN="waarp-gateway-${VERSION#v}.linux.tar.gz"
+    - export PACKAGE_WIN="waarp-gateway-${VERSION#v}.windows.zip"
+    - export PACKAGE_DOC="waarp-gateway-doc-${VERSION#v}.zip"
   script:
     - |
       release-cli create \
