--- a/.golangci.yml
+++ b/.golangci.yml
@@ -838,6 +838,11 @@ issues:
         - tagliatelle
       text: "got 'snmpv3Security' want 'snmPv3Security'"
 
+    # Non-constant calls to printf are perfectly fine.
+    - linters:
+        - govet
+      text: "printf: non-constant format string in call to"
+
   # Independently from option `exclude` we use default exclude patterns,
   # it can be disabled by this option. To list all
   # excluded by default patterns execute `golangci-lint run --help`.
