--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 # This file is a template, and might need editing before it works on your project.
-image: golang:1.20
+image: golang:latest
 
 variables:
   VERSION: "${CI_COMMIT_TAG}"
