feat: Added tasks for de/encrypting and signing/verifying files using AES, HMAC & PGP

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -691,6 +691,15 @@ linters-settings:
     force-short-decl-cuddling: false
     strict-append: true
 
+  testifylint:
+    # Enable all checkers (https://github.com/Antonboom/testifylint#checkers).
+    # Default: false
+    enable-all: true
+    require-error:
+      # Regexp for assertions to analyze. If defined, then only matched error assertions will be reported.
+      # Default: ""
+      fn-pattern: ^(Errorf?|NoErrorf?)$
+
 linters:
   disable-all: false
     #enable:
